force-app/main/default/objects/Invoice__c/fields/Customer_Contact_No__c.field-meta.xml
<CustomField>
    <fullName>Customer_Contact_No__c</fullName>
    <label>Customer Contact No</label>
    <required>true</required>
    <type>Phone</type>
</CustomField>