force-app/main/default/objects/Invoice__c/fields/Customer_email_ID__c.field-meta.xml
<CustomField>
    <fullName>Customer_email_ID__c</fullName>
    <label>Customer email ID</label>
    <type>Email</type>
</CustomField>