force-app/main/default/objects/Invoice__c/fields/Invoice_Status__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Status__c</fullName>
    <label>Invoice Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BARGAINING</fullName>
            </value>
            <value>
                <fullName>CLOSE</fullName>
            </value>
            <value>
                <fullName>FINALIZED</fullName>
            </value>
            <value>
                <fullName>OPEN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>